# code-snippets

./: .gitignore  CMakeLists.txt  README.md  bind.cpp  clear.bat  const.cpp  eliminate_duplication.cpp  enable_if.cc  equal.cpp  hash.cpp  scope_guard.h  string.cpp  string_move.cc  system.cpp  template-subclass.cc  template.cpp  typedef.cpp  union.cc  var_param_template.cc
Makefile/: CMakeLists.txt  bar.cc
Test/: ex1.cpp  macro.cpp  ref_ptr.c  sizeof.cpp  uuu.txt
Test/Makefile/: Makefile  test.cc
bash/: flux.sh  fonts-install.sh  generate-pac.sh  memory-available.sh
cpp-basic/: CMakeLists.txt  bind.cpp  const.cc  const.cpp  copy.cpp  delegate-class.cc  equal.cpp  ex1.cpp  inheritance.cpp  logic_words.cc  macro.cpp  ref_ptr.c  ref_ptr2.cpp  sizeof.cpp  system.cpp  typedef.cpp  ud_op.cc  union.cc  variables_test.cc
design-pattern/: CMakeLists.txt  specification.cc
fsm/: Makefile
fsm/fsm1/: main.cpp
fsm2/: Makefile  README.md  fsm.h  main.cc
jit/: gccjit.c
lambda/: CMakeLists.txt  main.cpp
make/: CMakeLists.txt  foo.cc  main.cc
memory/: CMakeLists.txt  atomic_pointer.cpp  memchk.h  mutual_ref.cpp  scope_guard.cpp  scope_guard.h  shared_ptr.cc
merge-git-repos/: main.py
mpl/: CMakeLists.txt  Makefile  get_first_if.h  index_sequence.h  main.cc  tuple.h
performance/: CMakeLists.txt  copy_performance.cpp  sum_perf.cc
socket/: CMakeLists.txt  README.md  client.cc  server.cc  server_socket.cc  server_socket.h  socket.cc  socket.h
socket/src/: server_socket.cc  server_socket.h  socket.cc  socket.h
socket/test/: client.cc  server.cc
stl/: CMakeLists.txt  Makefile  allocator.cpp  eliminate_duplication.cpp  hash.cpp  memory_resource.cpp  pmr.cpp
string/: CMakeLists.txt  string.cpp  string_move.cc
template/: CMakeLists.txt  enable_if.cc  template-spec.cc  template-subclass.cc  template.cpp  var_param_template.cc  variant.cc
test/: CMakeLists.txt  const.cpp  delete_comments.cc  ref_ptr2.cpp  remove_comment.cpp  uuu.txt.cc
test/DeleteComments/: CMakeLists.txt  delete_comments.cc  test.input.cc  test.output.cc
thread/: CMakeLists.txt  future.cc  thread.cpp
time/: CMakeLists.txt  time.cc
