add_executable(
  bind
  bind.cpp
)

add_executable(
  const
  const.cpp
)

add_executable(
  delegate-class
  delegate-class.cc
)

add_executable(
  equal
  equal.cpp
)

add_executable(
  inheritance
  inheritance.cpp
)

add_executable(
  logic_words
  logic_words.cc
)

add_executable(
  system
  system.cpp
)

add_executable(
  typedef
  typedef.cpp
)

add_executable(
  ud_op
  ud_op.cc
)

add_executable(
  union
  union.cc
)

add_executable(
  variables_test
  variables_test.cc
)
