add_executable(
  bind
  bind.cpp
)

add_executable(
  const
  const.cpp
)

add_executable(
  const2
  const.cc
)

add_executable(
  copy
  copy.cpp
)

add_executable(
  delegate-class
  delegate-class.cc
)

add_executable(
  ex1
  ex1.cpp
)

add_executable(
  equal
  equal.cpp
)

add_executable(
  inheritance
  inheritance.cpp
)

add_executable(
  logic_words
  logic_words.cc
)

add_executable(
  macro
  macro.cpp
)

add_executable(
  ref_ptr
  ref_ptr.c
)

add_executable(
  ref_ptr2
  ref_ptr2.cpp
)

add_executable(
  sizeof
  sizeof.cpp
)

add_executable(
  system
  system.cpp
)

add_executable(
  typedef
  typedef.cpp
)

add_executable(
  ud_op
  ud_op.cc
)

add_executable(
  union
  union.cc
)

add_executable(
  variables_test
  variables_test.cc
)
