add_executable(
  enable_if
  enable_if.cc
)

add_executable(
  template
  template.cpp
)

add_executable(
  template-spec
  template-spec.cc
)

add_executable(
  template-subclass
  template-subclass.cc
)

add_executable(
  variant
  variant.cc
)

add_executable(
  var_param_template
  var_param_template.cc
)
